--- a/ripplelayout/build.gradle
+++ b/ripplelayout/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.novoda.bintray-release'
 
 android {
     compileSdkVersion 26
@@ -19,4 +20,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+}
+
+publish {
+    userOrg = 'southernbox'
+    groupId = 'com.southernbox'
+    artifactId = 'RippleLayout'
+    publishVersion = '0.1.0'
+    website = 'https://github.com/SouthernBox/RippleLayout'
 }
