--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,13 @@ allprojects {
         jcenter()
         google()
     }
+
+    tasks.withType(Javadoc) {
+        options{
+            encoding "UTF-8"
+            charSet 'UTF-8'
+        }
+    }
 }
 
 task clean(type: Delete) {
