--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,8 @@ android:
     - android-26
     - build-tools-26.0.2
 
+before_script:
+  - chmod +x gradlew
+  
 script:
   - ./gradlew assembleRelease
