--- a/ripplelayout/src/main/AndroidManifest.xml
+++ b/ripplelayout/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.southernbox.ripplelayout" />
+<manifest package="com.nanbox.ripplelayout" />
