--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -21,5 +21,5 @@ android {
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation project(':ripplelayout')
+    implementation 'com.nanbox:RippleLayout:1.0.0'
 }
