--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -7,7 +7,7 @@ android {
         applicationId "com.nanbox.ripplelayout"
         minSdkVersion 15
         targetSdkVersion 28
-        versionCode 120190604
+        versionCode 1
         versionName "1.0"
     }
 
